--- a/Sarkar-Tang-replication-specific-functions.Rmd
+++ b/Sarkar-Tang-replication-specific-functions.Rmd
@@ -12,6 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 library(knockoff)
 library(pracma)
+library(tidyverse)
 ```
 
 
@@ -111,7 +112,7 @@ random_normals <- matrix(rnorm(n * d), nrow = n, ncol = d)
 # Transform the independent normals using the Cholesky factor to get correlated normals
 X <- random_normals %*% cholesky_factor
 
-X <- normc(X, center = F) # X ABSOLUTELY MUST be normalized to get sensical values from the knockoff functions. Here using the normalizing function used internally in the package
+X <- normc(X, center = F) # X must be normalized to get sensible values from the knockoff functions. Here using the normalizing function used internally in the package
 
 if (random_true_signal_indices){
   nonzero_indices <- sample(d, num_true_signals) # randomly sample some indices to be the true signal indices
@@ -166,8 +167,8 @@ num_iterations <- 300
 fdp_vec <- numeric(num_iterations)
 pwr_vec <- c(num_iterations)
 for (m in 1:num_iterations){
-  num_true_signals <- 5
-  d <- 10
+  num_true_signals <- 8
+  d <- 40
   feature_indices <- 1:d
   regression <- get_regression_model(n = 200, d = d, a = 8, num_true_signals = num_true_signals)
   true_nonzero_indices <- regression$nonzero_indices
@@ -224,14 +225,14 @@ independent_BH <- function(X, Y, alpha = .05){
 ```{r}
 # independent BH attempt (ie, only using beta_hat2)
 set.seed(12)
-num_iterations <- 200
+num_iterations <- 300
 fdp_vec <- numeric(num_iterations)
 pwr_vec <- c(num_iterations)
 for (m in 1:num_iterations){
   num_true_signals <- 8
   d <- 40
   feature_indices <- 1:d
-  regression <- get_regression_model(n = 200, d = d, a = 10, num_true_signals = num_true_signals)
+  regression <- get_regression_model(n = 200, d = d, a = 8, num_true_signals = num_true_signals)
   true_nonzero_indices <- regression$nonzero_indices
   rejected_indices <- independent_BH(regression$X, regression$Y, alpha = .05)
   num_rejections <- length(rejected_indices)
@@ -247,5 +248,169 @@ pwr
 ```
 
 
+```{r}
+# independent BH attempt (ie, only using beta_hat2)
+set.seed(12)
+num_iterations <- 300
+fdp_vec <- numeric(num_iterations)
+pwr_vec <- c(num_iterations)
+for (m in 1:num_iterations){
+  num_true_signals <- 8
+  d <- 40
+  feature_indices <- 1:d
+  regression <- get_regression_model(n = 200, d = d, a = 6, num_true_signals = num_true_signals)
+  true_nonzero_indices <- regression$nonzero_indices
+  rejected_indices <- independent_BH(regression$X, regression$Y, alpha = .05)
+  num_rejections <- length(rejected_indices)
+  num_correct_rejections <- length(intersect(rejected_indices, true_nonzero_indices))
+  num_false_rejections <- length(intersect(feature_indices[-true_nonzero_indices], rejected_indices))
+  fdp_vec[m] <- num_false_rejections / max(num_rejections, 1)
+  pwr_vec[m] <- num_correct_rejections / max(true_nonzero_indices, 1)
+}
+fdr <- mean(fdp_vec)
+pwr <- mean(pwr_vec)
+fdr
+pwr
+```
 
+```{r}
+run_method1_simulation <- function(n, d, a, num_true_sigs, num_iter = 300){
+  # Sets up the regression problem with specified dimensions and number of true signals, all of which have
+  # the same amplitude. 
+  fdp_vec <- numeric(num_iter)
+pwr_vec <- c(num_iter)
+for (m in 1:num_iter){
+  feature_indices <- 1:d
+  regression <- get_regression_model(n = n, d = d, a = a, num_true_signals = num_true_sigs)
+  true_nonzero_indices <- regression$nonzero_indices
+  rejected_indices <- sarkar_tang_method1(regression$X, regression$Y, alpha = .05)
+  num_rejections <- length(rejected_indices)
+  num_correct_rejections <- length(intersect(rejected_indices, true_nonzero_indices))
+  num_false_rejections <- length(intersect(feature_indices[-true_nonzero_indices], rejected_indices))
+  fdp_vec[m] <- num_false_rejections / max(num_rejections, 1)
+  pwr_vec[m] <- num_correct_rejections / max(true_nonzero_indices, 1)
+}
+fdr <- mean(fdp_vec)
+pwr <- mean(pwr_vec)
+return(list(fdr = fdr, power = pwr))
+}
+```
+
+```{r}
+set.seed(12)
+run_method1_simulation(n = 200, d = 40, a = 8, num_true_sigs = 8, num_iter = 300)
+```
+
+```{r}
+run_independent_BH_simulation <- function(n, d, a, num_true_sigs, num_iter = 300){
+  # Sets up the regression problem with specified dimensions and number of true signals, all of which have
+  # the same amplitude. 
+  fdp_vec <- numeric(num_iter)
+pwr_vec <- c(num_iter)
+for (m in 1:num_iter){
+  feature_indices <- 1:d
+  regression <- get_regression_model(n = n, d = d, a = a, num_true_signals = num_true_sigs)
+  true_nonzero_indices <- regression$nonzero_indices
+  rejected_indices <- independent_BH(regression$X, regression$Y, alpha = .05)
+  num_rejections <- length(rejected_indices)
+  num_correct_rejections <- length(intersect(rejected_indices, true_nonzero_indices))
+  num_false_rejections <- length(intersect(feature_indices[-true_nonzero_indices], rejected_indices))
+  fdp_vec[m] <- num_false_rejections / max(num_rejections, 1)
+  pwr_vec[m] <- num_correct_rejections / max(true_nonzero_indices, 1)
+}
+fdr <- mean(fdp_vec)
+pwr <- mean(pwr_vec)
+return(list(fdr = fdr, power = pwr))
+}
+```
+
+
+
+```{r}
+set.seed(12)
+# running setting 1 as specified in the paper
+result_vec_power_independent_BH <- c()
+result_vec_fdr_independent_BH <- c()
+for (amp in c(2, 4, 6, 8, 10)){
+  result <- run_independent_BH_simulation(n = 200,
+                                          d = 40,
+                                          a = amp, 
+                                          num_true_sigs = 8, 
+                                          num_iter = 300)
+  result_vec_power_independent_BH <- c(result_vec_power_independent_BH, result$power)
+  result_vec_fdr_independent_BH <- c(result_vec_fdr_independent_BH, result$fdr)
+}
+
+```
+
+
+
+
+
+
+```{r}
+independent_BH_setting1 <- data.frame(a = c(2, 4, 6, 8, 10), 
+                                         power = result_vec_power_independent_BH, 
+                                         fdr = result_vec_fdr_independent_BH)
+```
+
+```{r}
+set.seed(12)
+# running setting 2 as specified in the paper
+result_vec_power_independent_BH_setting2 <- c()
+result_vec_fdr_independent_BH_setting2 <- c()
+for (amp in c(2, 4, 6, 8, 10)){
+  result <- run_independent_BH_simulation(n = 500,
+                                          d = 50,
+                                          a = amp, 
+                                          num_true_sigs = 10, 
+                                          num_iter = 500)
+  result_vec_power_independent_BH_setting2 <- c(result_vec_power_independent_BH_setting2, result$power)
+  result_vec_fdr_independent_BH_setting2 <- c(result_vec_fdr_independent_BH_setting2, result$fdr)
+}
+
+```
+
+```{r}
+independent_BH_setting2 <- data.frame(a = c(2, 4, 6, 8, 10), 
+                                         power = result_vec_power_independent_BH_setting2, 
+                                         fdr = result_vec_fdr_independent_BH_setting2)
+```
+
+
+```{r}
+ggplot(independent_BH_setting1, aes(x = a, y = power)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, 1)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated Power', title = 'Setting 1 Results (n = 200, d = 40, k = 8)')
+```
+
+```{r}
+ggplot(independent_BH_setting1, aes(x = a, y = fdr)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, .15)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated FDR', title = 'Setting 1 Results (n = 200, d = 40, k = 8)')
+```
+
+
+
+
+```{r}
+ggplot(independent_BH_setting2, aes(x = a, y = power)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, 1)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated Power', title = 'Setting 2 Results (n = 500, d = 50, k = 10)')
+```
+
+
+```{r}
+ggplot(independent_BH_setting2, aes(x = a, y = fdr)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, .15)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated FDR', title = 'Setting 2 Results (n = 500, d = 50, k = 10)')
+```
 
