--- a/Sarkar-Tang-replication-specific-functions.Rmd
+++ b/Sarkar-Tang-replication-specific-functions.Rmd
@@ -262,9 +262,60 @@ method1_setting1 <- data.frame(a = c(2, 4, 6, 8, 10),
 ```
 
 
+```{r}
+set.seed(12)
+# running setting 2 as specified in the paper
+result_vec_power_method1_setting2 <- c()
+result_vec_fdr_method1_setting2 <- c()
+for (amp in c(2, 4, 6, 8, 10)){
+  result <- run_method1_simulation(n = 500,
+                                          d = 50,
+                                          a = amp, 
+                                          num_true_sigs = 10, 
+                                          num_iter = 500)
+  result_vec_power_method1_setting2 <- c(result_vec_power_method1_setting2, result$power)
+  result_vec_fdr_method1_setting2<- c(result_vec_fdr_method1_setting2, result$fdr)
+}
+
+```
+
+
+
+```{r}
+method1_setting2 <- data.frame(a = c(2, 4, 6, 8, 10), 
+                                         power = result_vec_power_method1_setting2, 
+                                         fdr = result_vec_fdr_method1_setting2)
+```
+
+
+```{r}
+set.seed(12)
+# running setting 3 as specified in the paper
+result_vec_power_method1_setting3 <- c()
+result_vec_fdr_method1_setting3 <- c()
+for (amp in c(2, 4, 6, 8, 10)){
+  result <- run_method1_simulation(n = 1000,
+                                          d = 100,
+                                          a = amp, 
+                                          num_true_sigs = 20, 
+                                          num_iter = 500)
+  result_vec_power_method1_setting3 <- c(result_vec_power_method1_setting3, result$power)
+  result_vec_fdr_method1_setting3 <- c(result_vec_fdr_method1_setting3, result$fdr)
+}
+
+```
+
+```{r}
+method1_setting3 <- data.frame(a = c(2, 4, 6, 8, 10), 
+                                         power = result_vec_power_method1_setting3, 
+                                         fdr = result_vec_fdr_method1_setting3)
+```
+
+
 ## Method 1 Graphs
 
 ```{r}
+# Setting 1 Power
 ggplot(method1_setting1, aes(x = a, y = power)) + 
   geom_line(color = 'red') +
   geom_point(shape = 4, color = 'red') + 
@@ -274,12 +325,56 @@ ggplot(method1_setting1, aes(x = a, y = power)) +
 
 
 ```{r}
+# Setting 1 FDR
 ggplot(method1_setting1, aes(x = a, y = fdr)) + 
   geom_line(color = 'red') +
   geom_point(shape = 4, color = 'red') + 
   scale_y_continuous(limits = c(0, .15)) +
   labs(x = 'Signal Strength - Amplitude', y = 'Simulated FDR', title = 'Setting 1 Results (n = 200, d = 40, k = 8)')
 ```
+
+
+```{r}
+# Setting 2 power
+ggplot(method1_setting2, aes(x = a, y = power)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, 1)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated Power', title = 'Setting 2 Results (n = 500, d = 50, k = 10)')
+```
+
+
+```{r}
+# Setting 2 FDR
+ggplot(method1_setting2, aes(x = a, y = fdr)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, .15)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated FDR', title = 'Setting 2 Results (n = 500, d = 50, k = 10)')
+```
+
+
+
+```{r}
+# Setting 3 power
+ggplot(method1_setting3, aes(x = a, y = power)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, 1)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated Power', title = 'Setting 3 Results (n = 1000, d = 100, k = 20)')
+```
+
+
+```{r}
+# Setting 3 FDR
+ggplot(method1_setting3, aes(x = a, y = fdr)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, .15)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated FDR', title = 'Setting 3 Results (n = 1000, d = 100, k = 20)')
+```
+
+
 
 # BH using the independent vector only 
 
